@@ -16,6 +16,7 @@ Bugs:
 - 2990315: cmciRelease not called in case of error
 - 3196128: enumInstances does not set NameSpace in ObjectPath in XML mode
 - 1956407: CIM-XML/HTTP connection to unix socket
+- 2967257: Use of CMPI_chars in SFCC. General CMPI specification bug
 
 Changes in 2.2.1
 ================
